<resources>
    <string name="app_name">EasyGo</string>

    <!-- login/signup strings -->
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Signup</string>
    <string name="username">Username</string>
    <string name="toast_invalid_username_or_password">Invalid username or password</string>


    <!-- reset password strings -->
    <string name="submit">Submit</string>
    <string name="text_back_to_login"><u>Back to login</u></string>
    <string name="text_forgot_password"><u>Forgot password? Click here to reset.</u></string>
    <string name="text_resend_code"><u>Didn\'t get the code? Resend code.</u></string>
    <string name="text_code_sent_alert">A reset code has been sent to your email id : %1$s. Please enter the code below.</string>
    <string name="confirm">Confirm</string>
    <string name="text_code_resent_alert">A new code has been sent</string>
    <string name="text_password_updated_alert">Your password has been reset. Login with the new password.</string>

    <string name="new_password">New Password</string>
    <string name="text_sign_up_or"><u>Not registered yet? Create new account</u></string>
    <string name="text_login"><u>Already a member? Login</u></string>

    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password must contain at least 1 Capital Alphabet, 1 Number and 1 Special Character.</string>
    <string name="password_length">Password must contain minimum 8 characters</string>
    <string name="passwords_check">Passwords do not match!</string>

    <string name="attractions_search_menu">Search</string>
    <string name="schedule_add_menu">Add</string>

    <string name="details_address">Address    </string>
    <string name="details_introduction">Introduction</string>
    <string name="details_time">Time        </string>

    <string name="schedule_address">Address</string>
    <string name="begin_time">BeginTime</string>
    <string name="end_time">EndTime</string>
    <string name="schedule_date">Date</string>
    <string name="schedule_remark">Remark for the schedule.</string>
    <string name="no_schedule_alert">No&#160;schedule&#160;yet</string>

    <string name="delete_text">Del</string>

    <string name="new_schedule_type">Type</string>
    <string name="new_schedule_address">Address</string>
    <string name="new_schedule_date">Date:xx/xx/xx</string>
    <string name="new_schedule_time">Time:xx:xx</string>
    <string name="new_schedule_cost">PlannedCost</string>
    <string name="new_schedule_remark">Remark</string>
    <string name="new_schedule_button_text">ADD</string>
    <string-array name="schedule_type_list">
        <item>ATTRACTIONS</item>
        <item>DINING</item>
        <item>TRANSPORT</item>
        <item>HOTEL</item>
    </string-array>

    <string name="schedule_title">Travel Schedule</string>

    <string name="user_profile">UserProfile</string>
    <string name="user_tour_list">TourList</string>
    <string name="user_check_list">CheckList</string>
    <string name="about">About</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="new_journal_photo">Upload&#160;your&#160;photo.</string>

    <string name="new_journal_title">Title</string>
    <string name="new_journal_date">Date:xx/xx/xx</string>
    <string name="new_journal_location">Location</string>
    <string name="new_journal_friends">Friends</string>
    <string name="new_journal_content">Content:something&#160;happened&#160;in&#160;your&#160;travel</string>

    <string name="journal_search_menu">Search</string>
    <string name="check_list_hint">Please enter item name here!</string>

    <string name="about_version">Version:1.1.1</string>
    <string name="about_developer">Developer:WeiNan, LuoYu</string>

    <string name="tour_title">Title</string>
    <string name="tour_remark">TourRemark</string>
    <string name="tour_list">Tour List</string>

    <string name="no_attraction">没有找到景点推荐\n请尝试换一个省份！</string>
    <string name="no_journals">没有找到游记，请添加！</string>
    <string name="sync">同步数据</string>
    <string name="load_journals">更新游记</string>
    <string name="load_attractions">获取景点</string>
    <string name="load_schedules">更新行程</string>
    <string name="no_value">暂无信息</string>
    <string name="no_province_achievement">您还没有解锁任意一个省份</string>
    <string name="no_journal_achievement">您还没有编写旅行日志</string>
    <string name="unlock">解锁</string>
    <string name="is_locked">您还未解锁该省</string>
    <string name="look_for_attraction">查看该省景点介绍</string>
</resources>
