<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Navigation.NavigationActivity" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_tour_list"
            android:icon="@drawable/ic_storage_green_36dp"
            android:title="@string/user_tour_list" />
        <item
            android:id="@+id/navigation_item_check_list"
            android:icon="@drawable/ic_settings_green_36dp"
            android:title="@string/user_check_list" />

        <item
            android:id="@+id/navigation_item_about"
            android:icon="@drawable/ic_hot_tub_white_36dp"
            android:title="@string/about" />
    </group>


</menu>