<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@android:color/white"
    android:layout_marginStart="6dp"
    android:paddingTop="4dp">

    <LinearLayout
        android:id="@+id/schedule_time_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/schedule_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/begin_time" />

        <TextView
            android:id="@+id/schedule_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_date"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/schedule_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_dining_schedule_round"
            android:layout_gravity="top"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="vertical"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/schedule_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/schedule_address" />

        <TextView
            android:id="@+id/schedule_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_remark"/>


    </LinearLayout>


</LinearLayout>