<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/journal_show_app_bar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/journal_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="center"
            app:layout_scrollFlags="scroll|exitUntilCollapsed" >

            <android.support.v7.widget.Toolbar
                android:id="@+id/journal_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <ImageView
                android:id="@+id/journal_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:src="@drawable/journal_picture_holder"
                android:scaleType="centerCrop"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_journal_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/ic_title_green_36dp"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/journal_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:layout_marginEnd="8dp"
                    android:enabled="false"
                    android:hint="@string/new_journal_title" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/ic_date_range_green_36dp"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/journal_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:enabled="false"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/new_journal_date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/ic_location_on_green_36dp"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/journal_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:enabled="false"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/new_journal_location" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/ic_group_add_green_36dp"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/journal_friends"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:enabled="false"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/new_journal_friends" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/ic_create_green_36dp"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/journal_content"
                    android:layout_width="0dp"
                    android:enabled="false"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/new_journal_content" />

            </LinearLayout>



        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="8dp"
        android:layout_gravity="bottom|end">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/delete_journal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:srcCompat="@drawable/ic_delete_forever_white_24dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/edit_journal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:srcCompat="@drawable/ic_create_white_24dp" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>